добавлена новая ветка update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="h1">КОНТАКТЫ</h1>
                 <span></span>
                 <span></span>
-
+                <a href="http://mail.yandex.ru/?uid=772874175#inbox"></a>
             </div>
         </div>
     </header>
